@@ -1,12 +1,0 @@
-{
-  "type": "minecraft:crafting_shapeless",
-  "ingredients": [
-    {
-      "item": "overpowered:null_block"
-    }
-  ],
-  "result": {
-    "item": "overpowered:void_crystal",
-    "count": 4
-  }
-}
